Testcases and Property API's updated and parametarized
